[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/icons/remove.svg" type="Texture" id=2]
[ext_resource path="res://assets/themes/panel_command_theme.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/icons/collapse.svg" type="Texture" id=4]
[ext_resource path="res://assets/icons/add.svg" type="Texture" id=5]
[ext_resource path="res://source/components/command.gd" type="Script" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="command" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container_command" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 32.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container_command" type="PanelContainer" parent="container_command"]
margin_right = 1240.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 3 )

[node name="_" type="HBoxContainer" parent="container_command/container_command"]
margin_left = 6.0
margin_top = 4.0
margin_right = 1234.0
margin_bottom = 28.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_collapse" type="TextureButton" parent="container_command/container_command/_"]
margin_top = 4.0
margin_right = 16.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 8, 8 )
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )

[node name="check_enabled" type="CheckBox" parent="container_command/container_command/_"]
margin_left = 20.0
margin_right = 44.0
margin_bottom = 24.0
pressed = true

[node name="label_command" type="Label" parent="container_command/container_command/_"]
margin_left = 48.0
margin_top = 1.0
margin_right = 198.0
margin_bottom = 23.0
rect_min_size = Vector2( 150, 0 )
text = "!test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="option_type" type="OptionButton" parent="container_command/container_command/_"]
margin_left = 202.0
margin_right = 302.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
text = "Sequence"
align = 1
items = [ "Sequence", null, false, 0, null, "Random", null, false, 1, null ]
selected = 0

[node name="input_arguments" type="SpinBox" parent="container_command/container_command/_"]
margin_left = 306.0
margin_right = 382.0
margin_bottom = 24.0
align = 1

[node name="option_access" type="OptionButton" parent="container_command/container_command/_"]
margin_left = 386.0
margin_top = 1.0
margin_right = 486.0
margin_bottom = 23.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 4
text = "All"
align = 1
items = [ "All", null, false, 0, null, "VIP", null, false, 1, null, "Moderator", null, false, 2, null, "Streamer", null, false, 3, null ]
selected = 0

[node name="_" type="VSeparator" parent="container_command/container_command/_"]
margin_left = 490.0
margin_right = 1184.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 1 )

[node name="button_tags" type="Button" parent="container_command/container_command/_"]
margin_left = 1188.0
margin_right = 1228.0
margin_bottom = 24.0
text = "Tags"

[node name="container_actions" type="HBoxContainer" parent="container_command"]
margin_left = 1244.0
margin_right = 1280.0
margin_bottom = 32.0
rect_min_size = Vector2( 36, 0 )

[node name="button_add" type="TextureButton" parent="container_command/container_actions"]
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 5 )

[node name="button_delete" type="TextureButton" parent="container_command/container_actions"]
margin_left = 20.0
margin_top = 8.0
margin_right = 36.0
margin_bottom = 24.0
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )

[node name="container_command_actions" type="VBoxContainer" parent="."]
margin_top = 36.0
margin_right = 1280.0
margin_bottom = 36.0
